# pixy

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml  test.yml
benchmarks/: bench_netboot.py  bench_piskie.py  bench_pixy.py
docs/: api.md  cli.md  configuration.md  extending.md  index.md
src/netboot/: AGENTS.md  __init__.py  _netutils.py  dhcp.py  logging.py  main.py
src/netboot/cmds/: __init__.py  complete.py  initiate.py
src/netboot/templates/: __init__.py
src/netboot/utils/: __init__.py  config.py  dicts.py  net.py
src/piskie/: AGENTS.md  __init__.py  _netutils.py  dhcp.py  logging.py  main.py
src/piskie/cmds/: __init__.py  complete.py  initiate.py
src/piskie/templates/: __init__.py  common.py
src/piskie/utils/: config.py  net.py
src/pixy/: __init__.py  _netutils.py  dhcp.py  logging.py  main.py
src/pixy/cmds/: __init__.py  complete.py  initiate.py
src/pixy/content/: __init__.py
src/pixy/templates/: __init__.py  jinja.py  shell.py
src/pixy/utils/: config.py  misc.py  net.py
tests/: test_dhcp.py  test_render.py  test_review_fixes.py  test_target.py  test_utils.py
