[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piskie"
version = "0.1.0"
authors = [{ name = "Jose A." }]
description = "PXE provisioning management: render netboot artifacts and drive DHCP for targets"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: System :: Boot",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "duho>=0.3.0",
    "pathlib_next[uri]>=0.8.2",
    "jinja2",
    "yaconfiglib>=0.10.0",
]

[project.optional-dependencies]
# Config-file loading for the CLI (YAML with !include).
config = ["pyyaml"]
# DNS resolution of hostname targets (piskie._netutils.nslookup).
dns = ["dnspython"]
dev = ["build", "hatchling", "pytest", "pytest-cov", "twine", "pyyaml", "dnspython"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[project.scripts]
piskie = "piskie.main:main"

[project.urls]
Homepage = "https://github.com/jose-pr/piskie/"
Issues = "https://github.com/jose-pr/piskie/issues"
Repository = "https://github.com/jose-pr/piskie"

[tool.hatch.build.targets.sdist]
exclude = ["/.*", "/.agents"]

[tool.hatch.build.targets.wheel]
packages = ["src/piskie"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
